hphp/test/zend/good/ext/exif/tests/exif027.php
<?php
var_dump(exif_read_data(dirname(__FILE__).'/image027.tiff'));
?>