hphp/test/zend/bad/ext-spl/SplFileObject_fpassthru_basic.php
<?php
$obj = New SplFileObject(dirname(__FILE__).'/SplFileObject_testinput.csv');
$obj->fpassthru();
?>